# system_newfs-msdos

./: .gitignore  CHANGELOG  COPYRIGHT  Makefile.am  README.md  configure.ac  newfs_msdos.c
doc/: newfs_msdos.8
src/: Makefile.am  mkfs_msdos.c  mkfs_msdos.h
