# Copyright (C) 2015 Wyplay, All Rights Reserved.
# This source code and any compilation or derivative thereof is the
# proprietary information of Wyplay and is confidential in nature.
# Under no circumstances is this software to be exposed to or placed under
# an Open Source License of any type without the expressed written permission
# of Wyplay.
#
AC_PREREQ(2.63)
AC_INIT([newfs_msdos], [0.0.1])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Check for programs
AC_PROG_CC

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])

#
# Generate output files.
#
AC_OUTPUT
