# Copyright (C) 2018 Wyplay, All Rights Reserved.
# This source code and any compilation or derivative thereof is the proprietary
# information of Wyplay and is confidential in nature.
# Under no circumstances is this software to be exposed to or placed
# under an Open Source License of any type without the expressed written
# permission of Wyplay.
#

sbin_PROGRAMS = newfs_msdos

newfs_msdos_CFLAGS = -Wl,-z,now -fPIE
newfs_msdos_LDFLAGS = -pie

newfs_msdos_SOURCES = newfs_msdos.c mkfs_msdos.c
